--- a/系統神學/系統神學.md
+++ b/系統神學/系統神學.md
@@ -1,4 +1,25 @@
 # 導論
+## 調查
+聖經讀了幾遍，最喜歡那卷書，聖經有多少卷書，你人生的目的是什麼，聖經教導我們人生的目的是什麼，羅馬書12:1-2
+
+什麼是神學（中文）為什麼要了解神學
+什麼是神學（認真的）
+什麼是系統神學，與查經解經
+
+為什麼學系統神學
+
+系統神學的特點
+
+課程安排
+
+考試和作業
+
+## 參考書目
+- **《西敏斯特小要理問答》（Westminster Shorter Catechism）**
+- **《西敏斯特大要理問答》（Westminster Larger Catechism）**
+- **《基督教要義》（Institutes of the Christian Religion）**，加爾文 著  
+- **《系統神學》（Systematic Theology）**，Wayne Grudem 著（中文譯本：古德恩）
+
 
 
 # 認識聖經
