update 導論 and 認識聖經

--- a/系統神學/系統神學.md
+++ b/系統神學/系統神學.md
@@ -1,14 +1,105 @@
 # 導論
-## 調查
-聖經讀了幾遍，最喜歡那卷書，聖經有多少卷書，你人生的目的是什麼，聖經教導我們人生的目的是什麼，羅馬書12:1-2
 
-什麼是神學（中文）為什麼要了解神學
-什麼是神學（認真的）
-什麼是系統神學，與查經解經
+## 一、什麼是神學？
 
-為什麼學系統神學
+「神學」（Theology）這個字由兩個部分組成：**theo-（神）** 與 **-logy（話語、道、學問）**，即「關於神的言說」。  
 
-系統神學的特點
+但我們可以用一句更貼切中文語感的話來表達：**神學就是學神**。  
+真正的神學不是抽象理論的堆砌，而是信徒出於敬畏與愛慕所做的認識與回應。它的目的不是為了「**知道關於神的事情**」，而是「**更深地認識神本人，進而愛祂、敬畏祂、順服祂**」。
+
+> 「若有人要跟從我，就當捨己，天天背起他的十字架來跟從我。」——路加福音 9:23
+
+然而，歷史與現代的發展中，「神學」的名稱常被濫用、曲解，甚至與真正的信仰南轅北轍。以下是一些典型例子：
+
+### 不合聖經的「神學」示例
+
+#### 中世紀詭辯式神學：  
+如著名問題「一個針尖上能站下幾個跳舞的天使？」這類問題不是出於敬畏神的渴慕，而是哲學與邏輯的空轉，脫離真理與實踐。
+
+#### 解放神學：  
+主張神的關心集中於政治與經濟上的「被壓迫者」，教會的責任是參與社會運動、推翻不公制度。它將救恩簡化為今生的社會解放，而非屬靈重生。
+
+> 使徒行傳 1:6-8：門徒問耶穌是否要「復興以色列國」，耶穌回答的焦點是「聖靈降臨、作主見證」，而不是政治變革。
+
+#### 成功神學：  
+宣稱只要你有信心、奉獻、宣告祝福，神就會賜給你健康、財富和成功。但主耶穌自己卻說：「人子卻沒有枕頭的地方」（太8:20），保羅更說：「我們成了萬物中的渣滓」（林前4:13）。
+
+#### 當代泛愛神學（極端寬容主義）：  
+例如，有人說「神是完全的愛，所以祂不會拒絕任何一種愛的關係」，這忽略了神的**聖潔與審判**。神的愛從不違背祂的聖潔。
+
+> 彼得前書 1:15-16：「你們要聖潔，因為我是聖潔的。」
+
+---
+
+## 二、什麼是系統神學？
+
+**系統神學**（Systematic Theology）是將聖經中關於神、人、罪、救恩、末世等主題的教導，進行整理、歸類、統整，使人能全面而清晰地認識真理。  
+它與逐段查經的方式不同，關注的是：**「聖經整體對某個主題是如何教導的？」**
+
+例如，我們若要明白「三位一體」的真理，就必須整理從創世記到啟示錄中關於父、子、聖靈的啟示。  
+系統神學幫助我們建立合乎聖經的信仰架構，使我們能：
+
+- 認識神是誰  
+- 知道我們是誰  
+- 明白世界本是怎樣，又為何墮落  
+- 抓住福音的應許與盼望  
+- 活出與所蒙恩相稱的生命
+
+---
+
+## 三、為什麼要學系統神學？
+
+### 1. 為要正確認識神與真理  
+在聖經浩瀚的啟示中，我們需要有系統地理解，才能避免零散、片面，甚至錯誤的神觀與信仰。
+
+### 2. 為要抵擋異端與錯誤教導  
+上述那些神學錯誤雖披著屬靈外衣，卻偏離聖經真理。唯有建立在整本聖經基礎上的系統神學，才能使我們得以分辨真假、持守純正信仰。
+
+> 「惟有那愚拙無學問的辯論，總要棄絕，因為知道這等事是起爭競的。」——提摩太後書 2:23  
+> 「知識是叫人自高自大，惟有愛心能造就人。」——哥林多前書 8:1
+
+### 3. 為要實踐敬虔的生活  
+神學從來不是停留在頭腦，它要引導我們進入敬拜與順服的實踐，使我們在凡事上榮耀神。
+
+### 4. 為要建立合乎聖經的價值觀與世界觀  
+面對現代社會複雜的問題——如婚姻、性別、財富、工作、苦難、科技發展等——系統神學讓我們站穩在聖經立場上，不被世界的潮流搖動。
+
+---
+
+## 四、系統神學的特點與方法
+
+### 1. 以聖經為最高權威  
+我們的信仰與教義都應當根植於聖經，而非哲學傳統、文化價值，或人的經驗。
+
+### 2. 分類整理的方式  
+系統神學按主題整理聖經真理，如：
+- 神論（Theology Proper）
+- 人論（Anthropology）
+- 基督論（Christology）
+- 救恩論（Soteriology）
+- 聖靈論（Pneumatology）
+- 教會論（Ecclesiology）
+- 末世論（Eschatology）等
+
+### 3. 理性思考與信心順服並行  
+神學不是靠聰明才智推理出來的系統，也不是迷信式地接受權威講法，而是在敬畏中運用理性，對神啟示的信心回應。
+
+---
+
+## 五、參考書目
+
+- **《西敏斯特小要理問答》**（Westminster Shorter Catechism）  
+- **《西敏斯特大要理問答》**（Westminster Larger Catechism）  
+- **《基督教要義》**（Institutes of the Christian Religion），加爾文 著  
+- **《系統神學》**（Systematic Theology），古德恩（Wayne Grudem） 著  
+- **《基督徒生活手冊》**（The Golden Booklet of the True Christian Life），加爾文 著  
+
+---
+
+> 「耶穌又對眾人說：若有人要跟從我，就當捨己，天天背起他的十字架來跟從我。」——路加福音 9:23
+
+
+
 
 課程安排
 
@@ -31,6 +122,243 @@
 ## 正典形成
 ## 聖經無謬誤
 ## 聖經與我們
+
+# 認識聖經
+
+## 啟示
+**啟示神學**
+
+想要認識一個人，我們可以通過觀察這個人的言行，我們也可以聽這個人自己訴說他的經歷和內心。如果我們想要認識神，也可以通過類似的兩種方式：觀察神所創造的世界和在歷史當中的作為，以及聽神親自來言說祂自己的事情。
+
+**普遍啟示**
+
+人們通過第一種方式得到的信息和知識屬於普遍啟示，通過觀察自然的運轉而得到的各種科學知識，以及通過學習社會關係而得到的為人處世的智慧，都屬於普遍啟示的範疇。神並沒有將普遍啟示侷限於某一個族羣或是某一種宗教的信徒。每個人接著神所賜予的智慧都可以獲得普遍啟示。
+但是，如同觀察一個人的言行很多時候會使我們產生對一個人的誤解一樣，普遍啟示的最大的問題在於，一個人可能能獲得關於一個物體的某種瞭解，但這種瞭解很可能與實際的真理相去甚遠，甚至背道而馳。比如，盲人摸一頭遠大與自己的大象。而神，就是這樣一個遠遠大於我們的『大象』。
+
+**特殊啟示**
+
+由於普遍啟示這樣的局限性，神為了我們能明白祂的心意而不產生誤解，所以必須要親自來和我們溝通。這種由神而來的，神親自發起的溝通叫做
+
+
+## 聖經來源
+聖經的來源 
+《聖經》從最早成書的約伯記（約公元前1500年）到最後成書的啟示錄（公元90-96年之間），歷經1600年左右，共有超過40個作者。這些作者多為猶太人，其文化水平、身份地位和職業各有不同，其中有君王、先知、祭司、牧人、漁夫、醫生等等。各作者描述神給各人的啟示各自成文，有不同的文体和不同的风格。這些作者沒有可能聚在一起來商討要一起怎樣編一本聖經，但縱觀整本聖經，各個書卷卻是渾然一體的。
+
+聖經是神的默示
+因為聖經各卷書雖然由不同的作者執筆，但背後的出品人或總編卻是共同一位亙古不變的神。
+
+
+這些經文告訴我們，聖經不是人的思想，而是神所要傳達給人的信息。而提後 3:16的經文更是明確了『聖經都是神所默示的』。這裏『默示』的希臘原文是『神呼氣』，直接表明了聖經的源頭是神。
+默示是神的靈感動人，讓人記錄下神想要傳達的信息。神允許不同的作者使用不同的體裁、風格以及不同的遣詞造句，神也以祂的大能監督保證了記錄下來的書卷雖然體裁、風格、遣詞造句都不同，但卻有全然的準確性和可靠性。
+
+（論及默示，要包含這些要點：1）神的監督，保證所寫下的書卷的準確；2）作者有各自的寫作風格；3）神人同工，使真理準確無誤的記錄下來；4）準確無誤指的是聖經原文，而不是某個譯本。）
+
+
+聖經內容簡介
+既然聖經是神親自對我們的啟示，那麼對我們來說更重要的是要明白這啟示到底是什麽。聖經的第一卷書《創世紀》，講的是『起初』的事，到聖經的最後一卷書《啟示錄》，講的是『末了』的事。從『起初』到『末了』，聖經向我們講述了神與人之間完整的故事。這故事包含了神對人的愛，神和人的約，以及這愛和這約是如何成就在耶穌基督的十字架上的。
+
+聖經的構成
+舊約：
+新約
+
+（要點：介紹聖經總體架構。若時間充足，聖經各書卷內容可簡略介紹。）
+
+聖經的主要內容 
+聖經66卷書包含了
+等等內容，看似浩繁，但卻完全的統一在一個主題之下，就是在全人類歷史以及未來中的神完整的計劃和終極的目的。這個主題主要包含了下面幾方面的內容：
+
+1) 神的存在及祂的永恒目的 
+神是創造萬物的獨一真神，是天地的主。
+
+神創造的永恒目的是爲了祂自己的榮耀，也要讓人以神爲樂。
+
+（要點：這兩點神創造的永恆目的。
+！！推薦！！在之後的整個系列課程中只要時機得當就反覆的強化這兩點）
+
+2)人的墮落和失敗 
+人違背神的命令，犯罪墮落
+
+人受罪和死的轄制 
+
+ 
+3) 神的拯救與恢復
+神在創世以前定下救贖計劃 
+
+神給以色列人律法，讓人認識神的性情，也認識人的罪和軟弱
+
+耶穌在十字架上完成救贖之工
+
+人因信得以在神前稱義
+
+聖靈使救恩的果效成就在信徒的身上 – 成聖
+
+最後的結局 – 神與人永遠同在
+
+
+聖經無謬誤
+因為聖經與我們生命的相關性，以及其所記啟示的重要性，就是的聖經的準確性成為了一個至關重要的問題。從客觀上說，我們是無法證明『聖經無謬誤』的。但因著如下幾點，我們相信『聖經無謬誤』：
+
+『聖經無謬誤』
+關於聖經無謬誤的詳細含義可以參見《芝加哥聖經無謬誤宣言》，這裏只列出與我們會有密切關係的幾點：
+
+
+聖經與我們
+聖經的功用
+永生的造物主寫給我們的聖經在如下幾點中於我們的生命有重要的功用：
+
+
+我們對帶聖經的態度
+正如我們之前提到過的，聖經應該是我們生命中絕對的權威，
+所以我們對聖經即神的話語首先是要相信。
+人類始祖亞當夏娃的犯罪，就是由於沒有相信神的教訓。也許我們在學習和工作中可以用trial and error的方式學習成長，但在我們的生命中，我們不應該對神的話語及其權威有絲毫的懷疑。如此我們才能在真道上迅速的長進。
+
+我們更應該學習聖經。藉着讀經、靈脩和禱告，以及自己對神的話語的經歷，還有他人的見證，我們更多的理解聖經，從而更多的認識這位大能的、信實的、良善的神，並親近祂。
+
+我們也要愛慕神的話語，並常常思想，就可以成爲我們生命的祝福。
+
+在讀聖經理解神的話語的過程中，我們應該知道的一點是，聖經不是對着我們寫的，但卻是爲了我們寫的。
+『聖經不是對着我們寫的』：每一卷經卷書信都有當時的寫作背景，每一句話都有着上下文的語境，理解這些寫作背景和上下文才能更準確的理解神話語的精意，而不應該隨便拿出一個句子就生搬硬套在某一件事情上。
+『聖經卻是爲着我們寫的』：雖然一段經文有自己特定的背景和語境，但沒有一段經文是過時的，所有的經文都依然是活潑的，並且是爲了我們生命的益處。聖靈會將聖經中的字句鮮活的應用在我們的生命當中。
+補充內容
+
+舊約正典的形成和確立
+舊約各部經卷的形成從主前15世紀起到主前4世紀止，是神的僕人將神的話語傳述、記錄下來的。這些舊約書卷在被記錄下來之後就已經在猶太人中廣泛的被接受為正典，但正典的確立工作卻是在主後70年第二聖殿被毀之後再開始進行。直到主後90-100年之間的猶太教雅麥尼亞會議（Synod of Jamnia）上，如今的舊約（希伯來聖經）組成才被正式確立。
+（關於舊約正典確立的時間，學者們的主張從主前五世紀到主後二世紀都有。）
+
+新約正典的形成和確立
+和舊約一樣，新約正典的形成和確立也經歷了一個相當長的時間。新約的寫作時期約從主後50年到主後100年。由於大部分新約書卷都出自耶穌身邊門徒的一手資料，從一開始這些書卷就在所流通的教會中被視為具有神聖的權威性。在這段時間裡，由於第一代跟隨主的門徒還都在世，正典觀念並未形成。
+在主後140年到200年間，隨著異端的興起，教會意識到了確立正典的緊迫性和必要性。在主後200到400年之間，各個教會在哪卷書卷該收錄於正典之內逐漸達成共識。而後在老底嘉會議（主後363年）中確立了新約書卷的神聖性和權威性，在迦太基會議（主後397年）正式確立了新約27卷書卷。
+
+聖靈的作為
+雖然聖經的舊約和新約書卷都經過了會議的正式確立，但這並不是說是人或者會議決定了那些書卷是神的話（聖經），而是在這些書卷流傳的過程當中聖靈已經帶領以色列人以及新約時代的基督徒廣泛的接受了這些神的話語。猶太或基督教的會議只是在聖靈的引導下加以正式宣認。
+
+次經
+對比信教聖經和天主教或東正教的聖經，會發現天主教和東正教的聖經中有很多新教聖經中不包含的書卷。這些書卷被稱為次經。次經多數形成與「間約時期」，由於這段時期是神沈默的四百年，並且這些書卷也沒有宣稱這是神的話語，所以這些次經被認為只是人的作品而不是神的話語，也沒有收錄在希伯來聖經當中。
+雖然這些書卷並不是神的話語，但由於其神學上沒有甚大問題，且具備一定的神學、文學、歷史學價值，也被用作參考，尤其可以為新約時代提供背景，所以也被稱作旁經。
+但是不讀這些經文並不會影響我們的信仰。
+
+偽經
+後人的假託之作，往往神學上有極大的問題。
+
+
+## 聖經構成
+聖經內容簡介
+既然聖經是神親自對我們的啟示，那麼對我們來說更重要的是要明白這啟示到底是什麽。聖經的第一卷書《創世紀》，講的是『起初』的事，到聖經的最後一卷書《啟示錄》，講的是『末了』的事。從『起初』到『末了』，聖經向我們講述了神與人之間完整的故事。這故事包含了神對人的愛，神和人的約，以及這愛和這約是如何成就在耶穌基督的十字架上的。
+
+聖經的構成
+舊約：
+新約
+
+（要點：介紹聖經總體架構。若時間充足，聖經各書卷內容可簡略介紹。）
+
+聖經的主要內容 
+聖經66卷書包含了
+等等內容，看似浩繁，但卻完全的統一在一個主題之下，就是在全人類歷史以及未來中的神完整的計劃和終極的目的。這個主題主要包含了下面幾方面的內容：
+
+1) 神的存在及祂的永恒目的 
+神是創造萬物的獨一真神，是天地的主。
+
+神創造的永恒目的是爲了祂自己的榮耀，也要讓人以神爲樂。
+
+（要點：這兩點神創造的永恆目的。
+！！推薦！！在之後的整個系列課程中只要時機得當就反覆的強化這兩點）
+
+2)人的墮落和失敗 
+人違背神的命令，犯罪墮落
+
+人受罪和死的轄制 
+
+ 
+3) 神的拯救與恢復
+神在創世以前定下救贖計劃 
+
+神給以色列人律法，讓人認識神的性情，也認識人的罪和軟弱
+
+耶穌在十字架上完成救贖之工
+
+人因信得以在神前稱義
+
+聖靈使救恩的果效成就在信徒的身上 – 成聖
+
+最後的結局 – 神與人永遠同在
+
+
+聖經無謬誤
+因為聖經與我們生命的相關性，以及其所記啟示的重要性，就是的聖經的準確性成為了一個至關重要的問題。從客觀上說，我們是無法證明『聖經無謬誤』的。但因著如下幾點，我們相信『聖經無謬誤』：
+
+『聖經無謬誤』
+關於聖經無謬誤的詳細含義可以參見《芝加哥聖經無謬誤宣言》，這裏只列出與我們會有密切關係的幾點：
+
+
+聖經與我們
+聖經的功用
+永生的造物主寫給我們的聖經在如下幾點中於我們的生命有重要的功用：
+
+
+我們對帶聖經的態度
+正如我們之前提到過的，聖經應該是我們生命中絕對的權威，
+所以我們對聖經即神的話語首先是要相信。
+人類始祖亞當夏娃的犯罪，就是由於沒有相信神的教訓。也許我們在學習和工作中可以用trial and error的方式學習成長，但在我們的生命中，我們不應該對神的話語及其權威有絲毫的懷疑。如此我們才能在真道上迅速的長進。
+
+我們更應該學習聖經。藉着讀經、靈脩和禱告，以及自己對神的話語的經歷，還有他人的見證，我們更多的理解聖經，從而更多的認識這位大能的、信實的、良善的神，並親近祂。
+
+我們也要愛慕神的話語，並常常思想，就可以成爲我們生命的祝福。
+
+在讀聖經理解神的話語的過程中，我們應該知道的一點是，聖經不是對着我們寫的，但卻是爲了我們寫的。
+『聖經不是對着我們寫的』：每一卷經卷書信都有當時的寫作背景，每一句話都有着上下文的語境，理解這些寫作背景和上下文才能更準確的理解神話語的精意，而不應該隨便拿出一個句子就生搬硬套在某一件事情上。
+『聖經卻是爲着我們寫的』：雖然一段經文有自己特定的背景和語境，但沒有一段經文是過時的，所有的經文都依然是活潑的，並且是爲了我們生命的益處。聖靈會將聖經中的字句鮮活的應用在我們的生命當中。
+補充內容
+
+舊約正典的形成和確立
+舊約各部經卷的形成從主前15世紀起到主前4世紀止，是神的僕人將神的話語傳述、記錄下來的。這些舊約書卷在被記錄下來之後就已經在猶太人中廣泛的被接受為正典，但正典的確立工作卻是在主後70年第二聖殿被毀之後再開始進行。直到主後90-100年之間的猶太教雅麥尼亞會議（Synod of Jamnia）上，如今的舊約（希伯來聖經）組成才被正式確立。
+（關於舊約正典確立的時間，學者們的主張從主前五世紀到主後二世紀都有。）
+
+新約正典的形成和確立
+和舊約一樣，新約正典的形成和確立也經歷了一個相當長的時間。新約的寫作時期約從主後50年到主後100年。由於大部分新約書卷都出自耶穌身邊門徒的一手資料，從一開始這些書卷就在所流通的教會中被視為具有神聖的權威性。在這段時間裡，由於第一代跟隨主的門徒還都在世，正典觀念並未形成。
+在主後140年到200年間，隨著異端的興起，教會意識到了確立正典的緊迫性和必要性。在主後200到400年之間，各個教會在哪卷書卷該收錄於正典之內逐漸達成共識。而後在老底嘉會議（主後363年）中確立了新約書卷的神聖性和權威性，在迦太基會議（主後397年）正式確立了新約27卷書卷。
+
+聖靈的作為
+雖然聖經的舊約和新約書卷都經過了會議的正式確立，但這並不是說是人或者會議決定了那些書卷是神的話（聖經），而是在這些書卷流傳的過程當中聖靈已經帶領以色列人以及新約時代的基督徒廣泛的接受了這些神的話語。猶太或基督教的會議只是在聖靈的引導下加以正式宣認。
+
+次經
+對比信教聖經和天主教或東正教的聖經，會發現天主教和東正教的聖經中有很多新教聖經中不包含的書卷。這些書卷被稱為次經。次經多數形成與「間約時期」，由於這段時期是神沈默的四百年，並且這些書卷也沒有宣稱這是神的話語，所以這些次經被認為只是人的作品而不是神的話語，也沒有收錄在希伯來聖經當中。
+雖然這些書卷並不是神的話語，但由於其神學上沒有甚大問題，且具備一定的神學、文學、歷史學價值，也被用作參考，尤其可以為新約時代提供背景，所以也被稱作旁經。
+但是不讀這些經文並不會影響我們的信仰。
+
+偽經
+後人的假託之作，往往神學上有極大的問題。
+
+
+## 聖經無謬誤
+聖經無謬誤」的意識。雖然「
+
+
+## 正典形成
+舊約正典的形成和確立
+舊約各部經卷的形成從主前15世紀起到主前4世紀止，是神的僕人將神的話語傳述、記錄下來的。這些舊約書卷在被記錄下來之後就已經在猶太人中廣泛的被接受為正典，但正典的確立工作卻是在主後70年第二聖殿被毀之後再開始進行。直到主後90-100年之間的猶太教雅麥尼亞會議（Synod of Jamnia）上，如今的舊約（希伯來聖經）組成才被正式確立。
+（關於舊約正典確立的時間，學者們的主張從主前五世紀到主後二世紀都有。）
+
+新約正典的形成和確立
+和舊約一樣，
+
+聖靈的作為
+雖然聖經的舊約和新約書卷都經過了會議的正式確立，但這並不是說是人或者會議決定了那些書卷是神的話（聖經），而是在這些書卷流傳的過程當中聖靈已經帶領以色列人以及新約時代的基督徒廣泛的接受了這些神的話語。猶太或基督教的會議只是在聖靈的引導下加以正式宣認。
+
+次經
+對比信教聖經和天主教或東正教的聖經，會發現天主教和東正教的聖經中有很多新教聖經中不包含的書卷。這些書卷被稱為
+
+偽經
+後人的假託之作，往往神學上有極大的問題。
+
+
+## 聖經與我們
+聖經與我們生命的相關性，以及其所記啟示的重要性，就是的聖經的準確性成為了一個至關重要的問題。從客觀上說，我們是無法證明『聖經無謬誤』的。但因著如下幾點，我們相信『聖經無謬誤』：
+
+『聖經無謬誤』
+關於聖經無謬誤的詳細含義可以參見《芝加哥聖經無謬誤宣言》，這裏只列出與我們會有密切關係的幾點：
+
+
+
 
 # 認識神
 ## 認識神的名（TODO）
